# pyunicodedata

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  coverage_fixup.py  formate.toml  makeunicodedata.py  pyproject.toml  repo_helper.yml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
pyunicodedata/: __init__.py  _c_unicodedata.py  _unicode_numeric.py  _unicodetype_db.py  _unicodetype_index.py
tests/: conftest.py  test_pyunicodedata.py  test_unicodedata.py
