[build-system]
requires = [ "whey", "whey-pth",]
build-backend = "whey"

[project]
name = "pyunicodedata"
version = "0.0.0"
description = "Pure-python implementation of some unicodedata functions."
readme = "README.rst"
keywords = [ "unicode",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/pyunicodedata"
"Issue Tracker" = "https://github.com/domdfcoding/pyunicodedata/issues"
"Source Code" = "https://github.com/domdfcoding/pyunicodedata"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "PSF-2.0"
additional-files = [
    "include pyunicodedata/unicode_numeric.json",
    "include pyunicodedata/unicodedata_db.h",
    "include pyunicodedata/unicodename_db.h",
    "include pyunicodedata/unicodetype_db.h",
    "include pyunicodedata/unicodetype_db.json",
    "include pyunicodedata/unicodetype_index.json",
]

[tool.whey.builders]
wheel = "whey_pth_wheel"

[tool.whey-pth]
name = "pyunicodedata.pth"
pth-content = "import pyunicodedata; pyunicodedata.install_patch()"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
